# SpeechCraft

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  start_server.bat
bark/: __init__.py  cli.py  model_downloader.py  server.py  settings.py  text2voice.py  utils.py  voice2voice.py
bark/core/: generation.py
bark/voice_cloning/: embedding_creator.py  hubert_manager.py
docs/: icon.xcf
speech_craft/: __init__.py  cli.py  server.py  text2voice.py  voice2voice.py
speech_craft/assets/prompts/: readme.md
speech_craft/core/: generation.py  voice_embedding.py
speech_craft/supp/: model_downloader.py
speech_craft/voice_cloning/: hubert_manager.py  voice2embedding.py
speechcraft/: __init__.py  cli.py  server.py  text2voice.py  voice2voice.py
speechcraft/assets/prompts/: hermine.npz  readme.md
speechcraft/core/: generation.py  voice_embedding.py
speechcraft/supp/: model_downloader.py
speechcraft/voice_cloning/: __init__.py  hubert_manager.py  voice2embedding.py
test/: test.py
text2voice/: __init__.py  cli.py  server.py  settings.py  text2voice.py  voice2voice.py
text2voice/assets/prompts/: readme.md
text2voice/core/: generation.py  voice_embedding.py
text2voice/supp/: model_downloader.py  utils.py
text2voice/voice_cloning/: hubert_manager.py  pre_kmeans_hubert.py  voice2embedding.py
