[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SpeechCraft"
version = "0.0.0"
description = "Create audio from text, clone voices and use them. Convert voice2voice. Bark model."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "SocAIty" }
]
# Apache 2.0
license = {file = "LICENSE"}

dependencies = [
    "media-toolkit[AudioFile]",
    "encodec",
    "fairseq; platform_system != 'Windows'",
    "fairseq@https://github.com/Sharrnah/fairseq/releases/download/v0.12.4/fairseq-0.12.4-cp310-cp310-win_amd64.whl; platform_system == 'Windows'",
    "boto3",
    "funcy",
    "huggingface-hub>=0.14.1",
    "numpy",
    "scipy",
    "tokenizers",
    "torch",
    "tqdm",
    "transformers"
]

[project.urls]
source = "https://github.com/suno-ai/bark"

[project.optional-dependencies]
full = [
    "fast-task-api>=0.0.1"
]

dev = [
    "bandit",
    "black",
    "codecov",
    "flake8",
    "hypothesis>=6.14,<7",
    "isort>=5.0.0,<6",
    "jupyter",
    "mypy",
    "nbconvert",
    "nbformat",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["bark"]

[tool.setuptools.package-data]
bark = ["assets/prompts/*.npz", "assets/prompts/v2/*.npz"]


[tool.black]
line-length = 100
